--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body{
     margin: auto;
 }
 .headline {
-    margin-top: 0px;
+    margin: -21px;
     display: flex;
     justify-content: center;
     padding-left: 5px;
