--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body{
     padding-bottom: 15px;
     font-size: 40px;
     height: 70px;
-    background-color: #007bff;
+    background-color: #000000;
     margin-bottom: 5px;
 }
 .tabs {
